# nixos-wizard

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
src/: drives.rs  main.rs  nixgen.rs  widget.rs
src/installer/: drivepages.rs  mod.rs  systempkgs.rs  users.rs
